--- a/style1.css
+++ b/style1.css
@@ -6,7 +6,7 @@
 .wrapper {
   height: 100%;
   width: 100%;
-  background: linear-gradient(180deg, #04fafd, 5%, #119dff, 50%, #030423);
+  background: linear-gradient(180deg, #aadbe1, 5%, #74bdcb, 50%, #074a5e);
   position: absolute;
 }
 .wrapper h1 {
@@ -124,26 +124,46 @@ div .dot {
     transform: scale(1.3) translateY(-100px) rotate(360deg);
   }
 }
+h1 {
+  font-family: "Georgia", serif;
+  font-style: italic;
+  font-weight: bold;
+  font-size: 50px;
+  text-align: center;
+  margin-top: 30px;
+  margin-bottom: 40px;
+  padding-right: 20px;
+  padding-left: 20px;
+}
+h2 {
+  font-family: "Garamond", serif;
+  font-weight: lighter;
+  font-size: 30px;
+  text-align: center;
+  margin-top: 10px;
+  margin-bottom: 50px;
+}
 .box{
   height: 50%;
   width: 50%;
   position: absolute;
-  top: 35%;
+  top: 25%;
   left: 25%;
 }
 .box form{
   max-width: 400px;
   margin: 0 auto;
-  background-color: #fff;
+  background-color: #efe7bc;
+  color: brown;
   padding: 20px;
   border-radius: 5px;
-
   box-shadow: 0 2px 5px rgba(0,0,0,0.3);
 }
 .box label {
+  font-family: "Garamond", serif;
+  font-weight: lighter;
   display: block;
   margin-bottom: 10px;
-  font-weight: bold;
 }
 .box input[type="text"],
 .box input[type="password"] {
@@ -157,9 +177,12 @@ div .dot {
 }
 .box input[type="submit"] {
   display: block;
-  width: 100%;
+  width: 40%;
   padding: 10px;
-  background-color: #4CAF50;
+  margin-top: 10px;
+  margin-right: auto;
+  margin-left: auto;
+  background-color: grey;
   color: #fff;
   border: none;
   border-radius: 5px;
